--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,8 @@
         <activity android:name=".Home" />
         <activity android:name=".itemAdder"></activity>
 
-        <meta-data android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDQTYjQRPkNtVfX_lZid2pzzSR-HtW_ldM"/>
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAurDguFgYiYvrBr-89aCs8G6mVxAhF7EI"/>
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
     </application>
