--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '26.0.2'
 }
 repositories{
     google()
@@ -32,8 +33,6 @@ dependencies {
     compile 'com.felipecsl:gifimageview:2.1.0'
     compile 'commons-io:commons-io:2.4'
     compile 'com.android.support:design:26.1.0'
-
     compile 'com.google.android.gms:play-services:11.8.0'
-
     compile 'com.sothree.slidinguppanel:library:3.4.0'
 }
