--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.timboat.coolapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    
+
     <permission
         android:name="com.timboat.coolapp.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
-    
-    <uses-permission android:name="com.timboat.permission.MAPS_RECIEVE"/>
-    <uses-permission android:name="com.google.android.providers.gsf.permissions.READ_GSERVICES"/>
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.timboat.permission.MAPS_RECIEVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permissions.READ_GSERVICES" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
-
+        android:required="true" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/logo_last_frame"
+        android:label="Wander"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SplashScreen">
@@ -36,11 +35,16 @@
         <activity android:name=".Login" />
         <activity android:name=".SignUp" />
         <activity android:name=".Home" />
-        <activity android:name=".itemAdder"></activity>
+        <activity android:name=".itemAdder" />
 
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAurDguFgYiYvrBr-89aCs8G6mVxAhF7EI"/>
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAurDguFgYiYvrBr-89aCs8G6mVxAhF7EI" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <activity android:name=".Settings"></activity>
     </application>
+
 </manifest>
